--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 h1{
-    color: deeppink;
+    color: deeppink; 
 }
 
 body{
-    background: linear-gradient(lilac);
-}
+    background: linear-gradient(lightpink,lightskyblue);
+}    
+
+
+
