--- a/style-metas.css
+++ b/style-metas.css
@@ -26,16 +26,15 @@ body {
 .titulo-principal {
     text-align: left;
     width: 100%;
-    font-size: 32px;
-
+    font-size: 32px
 }
 
 .titulo-principal span {
-    color: var(--roxo);
+    color: var(--azul);
 }
 
 .botao {
-    font-family: "Crakra Petch", sans-serif;
+    font-family: "Chakra Petch", sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -44,10 +43,12 @@ body {
     font-size: 18px;
     align-items: center;
     width: 100%;
-    border-bottom: 4px solid var(--botao-ativo);
+
+    border-bottom: 4px solid var(--botao-inativo);
     border-left: 2px solid var(--botao-ativo);
     border-right: 2px solid var(--botao-ativo);
     border-top: none;
+
 }
 
 .botoes {
@@ -55,13 +56,12 @@ body {
 }
 
 /*Aula 03*/
-
 .ativo {
     background-color: var(--botao-ativo);
-    border-bottom: 4px solid var(--roxo);
+    border-bottom: 4px solid var(--azul);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width:768px) {
     .botoes {
         display: flex;
     }
@@ -69,50 +69,48 @@ body {
     .botao:first-child {
         border-radius: 40px 40px 0 0;
     }
+
+    @media screen and (min-width: 768px) {
+        .botoes {
+            display: flex;
+        }
+
+        .botao:first-child {
+            border-radius: 40px 0 0 0;
+        }
+
+        .botao:last-child {
+            border-radius: 0 40px 0 0;
+        }
+    }
 }
 
-@media screen and (min-width: 768px) {
-    .botoes {
-        display: flex;
-    }
-
-    .botao:first-child {
-        border-radius: 40px 0 0 0;
-    }
-
-    .botao:last-child {
-        border-radius: 0 40px 0 0;
-    }
-}
-abas-textos{
+.abas-textos {
     background-color: var(--texto-fundo);
     padding: 40px;
     border-radius: 0 0 40px 40px;
 }
-.aba-conteudo.ativo{
-    display:block;
+
+.aba-conteudo.ativo {
+    display: block;
 }
 
-.aba-conteudo{
+.aba-conteudo {
     display: none;
 }
 
-.aba-conteudo-titulo-principal{
+.aba-conteudo-titulo-principal {
     font-size: 28px;
     text-align: center;
 }
-.aba-conteudo-titulo-secundario{
+
+.aba-conteudo-titulo-secundario {
     text-align: center;
-    color: var(--verde);
+    color: var(--azul);
     text-transform: uppercase;
 }
 
-
-
-
-
-
-
-
-
-
+.contador{
+    font-size: 20px;
+    text-align: center;
+}
